--- a/index.html
+++ b/index.html
@@ -1,9 +1,130 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/project1/portfolio.css">
+    <title>Basic Portfolio</title>
+</head>
 <body>
-  <h1>Adam Olszewski</h1>
-  <p>Witaj na mojej stronie!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <main>
+        <nav id="navbar">
+            <ul>
+                <li><a href="#intro-section">Home</a></li>
+                <li><a href="#about-section">About</a></li>
+                <li><a href="#skills-section">Skills</a></li>
+                <li><a href="#projects-section">Projects</a></li>
+                <li><a href="#contact-section">Contact</a></li>
+            </ul>
+        </nav>
+        <section id="intro-section">
+
+        </section>
+        <section id="welcome-section">
+            <div class="message">
+                <p>Hello <br> I Am Frontend Developer</p>
+            </div>
+            <div class="message">
+                <img src="https://cdn.pixabay.com/photo/2015/01/09/02/45/laptop-593673__340.jpg" alt="">
+            </div>
+        </section>
+        <section id="about-section">
+            <h1 class="section-heading">About me</h1>
+            <div class="about-container">
+                <div class="message my-image">
+                    <img src="https://cdn.pixabay.com/photo/2018/01/18/23/02/laptop-3091427__340.jpg" alt="">
+                </div>
+                <div class="message my-information">
+                    <p>I am Adam</p>
+                    <p>I am Web Developer</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere officia ratione fugit maiores perspiciatis architecto provident dignissimos aut exercitationem nemo!</p>
+                </div>
+            </div>
+        </section>
+        <section id="skills-section">
+            <h1 class="section-heading">My Skills</h1>
+            <div class="skills-container">
+                <div class="skill-information">
+                    <p><i class="fab fa-html5 fa-3x"></i></p>
+                    <p class="skill-name">HTML5</p>
+                    <p> <progress value="10" max="100" /></p>
+                </div>
+                <div class="skill-information">
+                    <p><i class="fab fa-css3 fa-3x"></i></p>
+                    <p class="skill-name">CSS3</p>
+                    <p> <progress value="10" max="100" /></p>
+                </div>
+                <div class="skill-information">
+                    <p><i class="fab fa-js fa-3x"></i></p>
+                    <p class="skill-name">JavaScript</p>
+                    <p> <progress value="5" max="100" /></p>
+                </div>
+                <div class="skill-information">
+                    <p><i class="fab fa-react fa-3x"></i></p>
+                    <p class="skill-name">React</p>
+                    <p> <progress value="5" max="100" /></p>
+                </div>
+                <div class="skill-information">
+                    <p><i class="fab fa-angular fa-3x"></i></p>
+                    <p class="skill-name">Angular</p>
+                    <p> <progress value="5" max="100" /></p>
+                </div>
+                 <div class="skill-information">
+                    <p><i class="fab fa-bootstrap fa-3x"></i></p>
+                    <p class="skill-name">Bootstrap</p>
+                    <p> <progress value="5" max="100" /></p>
+                </div>
+            </div>
+        </section>
+        <section id="projects-section">
+            <h1 class="section-heading">My projects</h1>
+            <div class="projects-container">
+                <div class="image-box">
+                    <a href="#">
+                        <img src="https://cdn.pixabay.com/photo/2018/05/18/15/30/web-design-3411373_960_720.jpg" alt="">
+                        <div>Company website</div>
+                    </a>
+                </div>
+                <div class="image-box">
+                    <a href="#">
+                        <img src="https://cdn.pixabay.com/photo/2016/04/04/14/12/monitor-1307227_960_720.jpg" alt="">
+                        <div>Test</div>
+                    </a>
+                </div>
+                <div class="image-box">
+                    <a href="#">
+                        <img src="https://cdn.pixabay.com/photo/2014/04/05/09/30/tablet-314153_960_720.png" alt="">
+                        <div>Test</div>
+                    </a>
+                </div>
+                <div class="image-box">
+                    <a href="#">
+                        <img src="https://cdn.pixabay.com/photo/2016/03/10/08/49/hand-1248053_960_720.jpg" alt="">
+                        <div>Test</div>
+                    </a>
+                </div>
+                <div class="image-box">
+                    <a href="#">
+                        <img src="https://cdn.pixabay.com/photo/2015/11/07/08/49/hand-1030563_960_720.jpg" alt="">
+                        <div>Test</div>
+                    </a>
+                </div>
+            </div>
+        </section>
+        <section id="contact-section">
+            <h1 class="section-heading">Contact me!</h1>
+            <p> Find me on:</p>
+            <p>
+                <a href="#"> <i class="fab fa-github"> GitHub</i> </a>
+                <a href="#"> <i class="fab fa-linkedin-in"> Linkedin</i> </a>
+                <a href="#"> <i class="fas fa-envelope-square"> E-mail</i> </a>
+            </p>
+        </section>
+    </main>
 </body>
- 
 </html>
